[package]
edition = "2018"
name    = "ci-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = { version = "1.0.42" }
array-bytes  = { version = "1.3.3" }
cargo_toml   = { version = "0.9.2" }
colored      = { version = "2.0.0" }
serde_json   = { version = "1.0.66" }
structopt    = { version = "0.3.22" }
submetadatan = { version = "0.5.1", features = ["codec", "simple"] }
subrpcer     = { version = "0.4.0", features = ["ureq-client"] }
substorager  = { version = "0.3.0" }
thiserror    = { version = "1.0.26" }
walkdir      = { version = "2.3.2" }
