[package]
name = "deprecated-darwinia-misc-toolset"
version = "0.1.0"
authors = ["Aki <wuminzhe@gmail.com>"]
edition = "2018"

[dependencies]
hex = "0.4.2"
hex-literal = "0.3.1"
sp-core = { version = "2.0", path = "/Users/itering/Projects/paritytech/substrate/primitives/core" }
sp-runtime = { version = "2.0", path = "/Users/itering/Projects/paritytech/substrate/primitives/runtime" }
sp-trie = { version = "2.0", path = "/Users/itering/Projects/paritytech/substrate/primitives/trie" }
sp-state-machine = { version = "0.8.0", path = "/Users/itering/Projects/paritytech/substrate/primitives/state-machine" }
ckb-merkle-mountain-range = { version = "0.3.1", path = "/Users/itering/Projects/wuminzhe/merkle-mountain-range" }
ws = { git = "https://github.com/housleyjk/ws-rs.git", features = ["ssl"] }
log = "0.4.0"
env_logger = "0.7.1"
url = "2.0.0"
json = { git = "https://github.com/maciejhirsz/json-rust.git" }
parity-scale-codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
rustc-hex = "2.1.0"
trie-db = { version = "0.22.0", default-features = false }
substrate-subxt = "0.13.0"
sp-keyring = "2.0.0"
web3 = "0.13.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
error-chain = "0.12.4"
anyhow = "1.0.33"
thiserror = "1.0"

[dependencies.openssl]
optional = true
version = "0.10"

[dependencies.tokio]
package = "tokio"
version = "0.2.22"
features = ["full"]

[dependencies.primitives]
package = "darwinia-bridge-primitives"
version = "0.0.10"
git = "https://github.com/darwinia-network/bridge-primitives.git"
# branch = "sudo"
# path = "../bridge-primitives"
features = ["runtime"]

[features]
default = []
ssl = ["openssl"]

[[bin]]
name = "mmrproof"
path = "src/mmrproof.rs"

[[bin]]
name = "mmrprint"
path = "src/mmrprint.rs"

[[bin]]
name = "20to32"
path = "src/20to32.rs"

[[bin]]
name = "read_proof_check"
path = "src/read_proof_check.rs"

[[bin]]
name = "darwinia_client"
path = "src/darwinia_client.rs"

[[bin]]
name = "mmrroot"
path = "src/mmrroot.rs"
