[package]
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"
name    = "mmr-exporter"
version = "0.1.0"

[dependencies]
array-bytes        = { version = "1.3.3" }
async-std          = { version = "1.9.0", features = ["attributes"] }
isahc              = { version = "1.4.0" }
parity-scale-codec = { version = "2.1.0" }
serde_json         = { version = "1.0.64" }
subrpcer           = { version = "0.2.2", features = ["sender"] }
substorager        = { version = "0.1.8" }
